fix: make text-warning more visible on our body-color's background

--- a/my-virtual-pets/my-virtual-pets-frontend/my-virtual-pets-frontend/wwwroot/app.css
+++ b/my-virtual-pets/my-virtual-pets-frontend/my-virtual-pets-frontend/wwwroot/app.css
@@ -69,6 +69,10 @@ h1:focus {
     padding: 20px 0;
 }
 
+.text-warning {
+    color: orange !important;
+}
+
 .page-title:nth-of-type(2) {
     font-size: 2rem;
 }
